--- a/BlazorDbTable/Shared/NavMenu.razor
+++ b/BlazorDbTable/Shared/NavMenu.razor
@@ -29,6 +29,11 @@
                 Hirarchy
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Duplicates" Match="NavLinkMatch.All">
+                Duplicates
+            </NavLink>
+        </div>
     </nav>
 </div>
 
